[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/UI/HarvesterDialog.gd" type="Script" id=1]

[node name="HarvesterDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
offset_right = 1920.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 104.0
offset_right = 1920.0
offset_bottom = 976.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
offset_right = 100.0
offset_bottom = 872.0
custom_minimum_size = Vector2( 100, 0 )

[node name="ThisShouldBeStandardDialogScene" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
offset_left = 104.0
offset_right = 1816.0
offset_bottom = 872.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.403922, 0.6, 1 )

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 18.0
offset_right = -12.0
offset_bottom = 58.0
custom_minimum_size = Vector2( 40, 40 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 35.0
offset_right = -62.0
offset_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene/HBoxContainer"]
offset_right = 809.0
offset_bottom = 801.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene/HBoxContainer/Character"]
offset_right = 809.0
offset_bottom = 14.0
text = "Character"

[node name="InventoryList" type="ItemList" parent="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene/HBoxContainer/Character"]
offset_top = 18.0
offset_right = 809.0
offset_bottom = 801.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Harvester" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene/HBoxContainer"]
offset_left = 813.0
offset_right = 1622.0
offset_bottom = 801.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene/HBoxContainer/Harvester"]
offset_right = 809.0
offset_bottom = 14.0
text = "Harvester"

[node name="InventoryList" type="ItemList" parent="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene/HBoxContainer/Harvester"]
offset_top = 18.0
offset_right = 809.0
offset_bottom = 801.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Glass", null, false, "Iron Ingot", null, false, "Silicon Wafer", null, false ]
allow_reselect = true

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
offset_left = 1820.0
offset_right = 1920.0
offset_bottom = 872.0
custom_minimum_size = Vector2( 100, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
offset_top = 980.0
offset_right = 1920.0
offset_bottom = 1080.0
custom_minimum_size = Vector2( 0, 100 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene/Button" to="." method="_on_Button_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/ThisShouldBeStandardDialogScene/HBoxContainer/Harvester/InventoryList" to="." method="_on_CraftingList_item_selected"]
